# trainings_part_0_RPN_calculator

tr0_1/: CMakeLists.txt  Readme.md  coverage.sh
tr0_1/src/: CMakeLists.txt  ComplexCalculator.cpp  ComplexCalculator.h  ComplexNumber.cpp  ComplexNumber.h  ComplexParser.cpp  ComplexParser.h  RpnNotationConverter.cpp  RpnNotationConverter.h
tr0_1/test/: CMakeLists.txt  ComplexCalculator_tests.cpp  ComplexNumber_tests.cpp  ComplexParser_tests.cpp  RpnNotationConverter_tests.cpp
tr0_2/: CMakeLists.txt  coverage.sh
tr0_2/src/: CMakeLists.txt  Calculator.h  Calculator.tpp  NumberParser.h  RpnNotationConverter.cpp  RpnNotationConverter.h
tr0_2/src/numbers/: ComplexNumber.h  ComplexNumber.tpp  MyInt.cpp  MyInt.h
tr0_2/src/parsers/: ComplexParser.h  ComplexParser.tpp  MyIntParser.cpp  MyIntParser.h
tr0_2/tests/: CMakeLists.txt  Calculator_tests.cpp  ComplexCalculator_tests.cpp  MyIntCalculator_tests.cpp  RpnNotationConverter_tests.cpp
tr0_2/tests/mocks/numbers/: NumberMock.cpp  NumberMock.h  NumberStaticMock.h
tr0_2/tests/mocks/parsers/: ParserMock.cpp  ParserMock.h  ParserStaticMock.h
tr0_2/tests/numbers/: ComplexNumber_tests.cpp  MyInt_tests.cpp
tr0_2/tests/parsers/: ComplexParser_tests.cpp  MyIntParser_tests.cpp
tr0_3/: Readme.md
tr0_3/calculator/: CMakeLists.txt  CMakeLists.txt.user.f54a240  calculatordevice.cpp  calculatordevice.h  displaywidget.cpp  displaywidget.h  displaywidget.ui  errormessagebox.cpp  errormessagebox.h  icalculatordevice.h  ierrormessage.h  keyswidget.cpp  keyswidget.h  keyswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  myhex.cpp  myhex.h  myhexparser.cpp  myhexparser.h  tokenemiter.cpp  tokenemiter.h
tr0_3/calculator/lib/: Calculator.h  libcalculator_lib.so.1  libcalculator_lib.so.1.0
tr0_3/calculator_lib/: CMakeLists.txt  Calculator.cpp
tr0_3/calculator_tests/: CMakeLists.txt  DisplayWidgetTests.cpp  DisplayWidgetTests.h  KeysWidgetTests.cpp  KeysWidgetTests.h  MainWindowTests.cpp  MainWindowTests.h  MyHexParserTests.cpp  MyHexParserTests.h  MyHexTests.cpp  MyHexTests.h  TokenEmiterTests.cpp  TokenEmiterTests.h  coverage.sh  main.cpp
tr0_3/calculator_tests/mocks/: CalculatorDeviceMock.h  ErrorMessageMock.h
